# yew-tailwindcss

./: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
src/: main.rs  tailwind.css
src/components/: app.rs
