[package]
name = "yew-tailwindcss"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.4.0"
gloo-console = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
futures = "0.3"
anyhow = "1.0"
